<resources>
    <string name="TheWorkOut">The Work Out</string>
    <string name="textView">The Work Out</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="fName">First Name</string>
    <string name="lName">Last Name"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="reg">Register</string>
    <string name="Welcome">Welcome To The Work Out app</string>
    <string name="MakeGains">Mark Your Gains</string>
    <string name="Progress">Progress</string>
    <string name="Profile">View Profile</string>
    <string name="user">User</string>
</resources>
